src/main/resources/static/css/style.css
@charset "UTF-8";


/* GLOBAL CSS */
:root {
	--primary-color: #3F88C5;
	--accent-one: #FDB833;
	--accent-two: #474448;
	--accent-three: #DF928E;
}

body {
	color: white;
	background-color: var(--primary-color);
}

.navPane {
	display: flex;
	align-items: center;
	justify-content: center;
	height: 5rem;
}

.mainSplash {
	background-color: var(--primary-color);
	color: white;
	border: 3px solid white;
}

.primary-color {
	background-color: var(--primary-color);
}

.accent,
#navbarBasic > .navbar-nav > .nav-item > a.active {
	color: var(--accent-one);
}

.accentSplash, .primary-accent {
	background-color: var(--accent-one);
}

.accentSplash:hover {
	background-color: #DE9502;
}

.secondary-accent {
	background-color: var(--accent-two);
}

.tertiary-accent {
	background-color: var(--accent-three);
}

.transparent {
	color: transparent;
	background-color: transparent;
	height: inherit;
}

.transparent:hover {
	color: white;
	background-color: var(--accent-one);
}

.arrow {
	fill: white;
}

.h-85 {
	height: 85%;
}


/* HOME PAGE */

.fadeIn {
	animation: 1s ease-in 0s fadein; 
}

@keyframes fadein {
	from {
		transform: translateY(3vh);
		color: transparent;
	}
	to {
		transform: translateY(0);
		color: white;
	}
}

.shape-icon {
	height: 50px;
	width: 50px;
	position: relative;
}

.shape-icon:before {
	content: "";
	border-left: 2px solid white;
	position: absolute;
	top: 40%;
	left: 0;
	height: 15px;
	width: 100%;
	transition: 300ms ease-in-out;
}

.cont-section:hover > .shape-icon:before {
	transition: 300ms ease-in-out;
	content: "";
	border-left: 2px solid white;
	position: absolute;
	top: 40%;
	left: 96%;
	height: 15px; 
	width: 100%;
}

.cont-section:hover {
	transition: 300ms ease-in-out;
	border: 2px solid;
	padding: 10px;
}

.cont-section {
	transition: 300ms ease-in-out;
	
}

/* SPECIFIC HONEY POT PAGE */

.noLink:link,
.noLink:visited,
.noLink:hover,
.noLink:active {
	text-decoration: none;
}

.circle {
	height: 250px;
	width: 250px;
	border: 2px solid red;
	border-radius: 50%;
}

